--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head><title>I love Riya</title></head>
+    <head>
+        <title>My awesome web page</title>
+    </head>
 
   <body>
     Hello there, awesome person! 
