--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
 
   <body><h1>I miss you</h1>
+<img src="https://octodex.github.com/images/vinyltocat.png">
     Hello there, awesome person! 
   </body>
 
