--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>My awesome web page</title>
     </head>
 
-  <body><h1>I miss you</h1>
+<img src="https://avatars.githubusercontent.com/u/95463018?v=4">
+
 <img src="https://octodex.github.com/images/vinyltocat.png">
     Hello there, awesome person! 
   </body>
