--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
     <head>
         <title>My awesome web page</title>
     </head>
+    <body>
 
 <img src="https://avatars.githubusercontent.com/u/95463018?v=4">
 
 <img src="https://octodex.github.com/images/vinyltocat.png">
-    Hello there, awesome person! 
+    <ul>
+
+    <li>https://www.google.com</li>
+
+    <li>https://www.instagram.com</li>
+
+    <li>https://www.telegram.com</li>
+
+</ul>Hello there, awesome person! 
   </body>
 
 </html>
