--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <li>https://www.instagram.com</li>
 
     <li>https://www.telegram.com</li>
+        
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
 
 </ul>Hello there, awesome person! 
   </body>
