--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
 
 <img src="https://avatars.githubusercontent.com/u/95463018?v=4">
-
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 <img src="https://octodex.github.com/images/vinyltocat.png">
     <ul>
 
