--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>My awesome web page</title>
     </head>
-    <body>
+    <body>>Hello there, awesome person!
 
 <img src="https://avatars.githubusercontent.com/u/95463018?v=4">
       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
@@ -18,7 +18,7 @@
         
     <li><a href="https://github.com">This is a link to GitHub!</a></li>
 
-</ul>Hello there, awesome person! 
+</ul 
   </body>
 
 </html>
